# Agentic-Recruitment-System

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PRD.md  README.md  ROADMAP.md  docker-compose.local.yml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 2c0dce11f4bb_add_hr_user_table_slice_09_auth.py  99a4ade50896_initial_tables_job_posting_application_.py  a1b2c3d4e5f6_add_jd_content_fields_jd1.py  b2c3d4e5f6a7_add_rubric_suggestion_count_jd3.py  d5f65a501975_add_screening_session_table.py  e76c813663ae_add_reminded_at_timed_out_at_to_.py
apps/backend/app/: __init__.py  __main__.py  main.py
apps/backend/app/agents/: checkpointer.py  graph.py  policy.py  runner.py  state.py
apps/backend/app/api/: deps.py
apps/backend/app/core/: config.py  database.py  hardening.py  html_text.py  logging.py  qdrant_client.py  redis_client.py  security.py
apps/backend/app/models/: base.py  (+6 more)
apps/backend/tests/: test_audit_trace.py  test_auth.py  test_checkpointer.py  test_deploy_config.py  test_email.py  test_gate_invite.py  test_gate_rank.py  test_graph.py  test_hardening.py  test_human_review_reason.py  test_jd_archive.py  test_jd_content.py  test_jd_edit.py  test_jd_embedding.py  test_parser.py  test_public_apply.py  test_ranker.py  test_review.py  test_rubric_suggest.py  test_scheduler_email.py  test_screener_optional.py  test_screener_timeout.py  test_screening.py  test_storage.py
(+102 files in other folders)
