[project]
name = "ars-backend"
version = "0.1.0"
description = "Autonomous Recruitment System — backend (FastAPI · LangGraph). Scaffold."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "sqlalchemy>=2.0,<2.1",
    "asyncpg>=0.29,<0.30",
    "alembic>=1.13,<1.14",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "email-validator>=2,<3",
    "python-dotenv>=1.0,<2",
    "redis>=5.0,<6",
    "qdrant-client>=1.10,<2",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.27,<0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
# Cài editable để `app` import được từ uvicorn / pytest / alembic bất kể CWD.
